<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:background="@color/Back_color">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/ubuntu_bold"
        android:textColor="@color/Text_item"
        android:text="@string/register"
        android:textSize="40sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/enterName"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="12dp"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:textColor="@color/Text_item"
        android:textColorHint="@color/Text_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/enterSecondName"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="4dp"
        android:hint="@string/secondname"
        android:inputType="textPersonName"
        android:textColor="@color/Text_item"
        android:textColorHint="@color/Text_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterName" />

    <EditText
        android:id="@+id/enterDate"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="4dp"
        android:clickable="true"
        android:focusable="false"
        android:hint="@string/dateOfBD"
        android:inputType="date"
        android:textColor="@color/Text_item"
        android:textColorHint="@color/Text_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterRepeatPassword" />

    <EditText
        android:id="@+id/enterRepeatPassword"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="12dp"
        android:hint="@string/repeartPasswors"
        android:inputType="textPassword"
        android:textColor="@color/Text_item"
        android:textColorHint="@color/Text_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterPassword" />

    <EditText
        android:id="@+id/enterPassword"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/Text_item"
        android:textColorHint="@color/Text_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterLogin" />

    <EditText
        android:id="@+id/enterLogin"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="12dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="@color/Text_item"
        android:textColorHint="@color/Text_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterSecondName" />

    <ImageView
        android:id="@+id/avatarImageView"
        android:layout_width="148dp"
        android:layout_height="117dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_launcher_foreground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterDate" />

    <Button
        android:id="@+id/btnAddImage"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:backgroundTint="#5C348C"
        android:fontFamily="@font/ubuntu_medium"
        android:text="@string/photo_avatar"
        android:textColor="@color/Text_hint"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.165"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/avatarImageView" />

    <Button
        android:id="@+id/btnTakePhoto"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="12dp"
        android:backgroundTint="#5C348C"
        android:fontFamily="@font/ubuntu_medium"
        android:text="Сделать фото"
        android:textColor="@color/Text_hint"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAddImage" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="12dp"
        android:backgroundTint="#5C348C"
        android:fontFamily="@font/ubuntu_medium"
        android:text="@string/save"
        android:textColor="@color/Text_hint"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnTakePhoto" />

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="244dp"
        android:layout_marginTop="156dp"
        android:backgroundTint="#5C348C"
        android:fontFamily="@font/ubuntu_medium"
        android:onClick="onClickCancel"
        android:text="@string/back"
        android:textColor="@color/Text_hint"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/avatarImageView" />

</androidx.constraintlayout.widget.ConstraintLayout>
