<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@color/Back_color">


    <EditText
        android:id="@+id/enterLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:ems="10"
        android:fontFamily="@font/ubuntu_light"
        android:hint="@string/email"
        android:textColor="@color/Text_item"
        android:textColorHint="@color/Text_hint"
        android:inputType="textPersonName"
        android:textColorLink="@color/Text_item"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.138"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_title" />

    <EditText
        android:id="@+id/enterPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:ems="10"
        android:fontFamily="@font/ubuntu_light"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/Text_item"
        android:textColorHint="@color/Text_hint"
        android:textColorLink="@color/Text_item"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.138"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterLogin" />


    <Button
        android:id="@+id/btnLogin"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:backgroundTint="#5C348C"
        android:fontFamily="@font/ubuntu_medium"
        android:text="@string/sign_in"
        android:textColor="@color/Text_hint"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.135"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterPassword" />

    <TextView
        android:id="@+id/login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/ubuntu_bold"
        android:shadowColor="#0D012C"
        android:text="@string/login"
        android:textColor="@color/Text_item"
        android:textSize="40sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="171dp"
        android:layout_height="120dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="64dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/image1" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="201dp"
        android:layout_height="384dp"
        android:layout_marginStart="216dp"
        android:layout_marginTop="172dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/star_fon" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="210dp"
        android:layout_height="349dp"
        android:layout_marginStart="236dp"
        android:layout_marginTop="580dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/star_fon" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.142"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="52dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/ubuntu_light"
            android:text="@string/new_to_here"
            android:textColor="@color/Text_simple"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@+id/btnRegister"
            app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

        <TextView
            android:id="@+id/btnRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="52dp"
            android:fontFamily="@font/ubuntu_medium"
            android:text="@string/register"
            android:textColor="@color/Text_hint"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.407"
            android:onClick="onClickEntryRegister"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnLogin" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>